test/tests/stages/9_functions/valid/arguments_in_registers/hello_world.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[84]:
  int
  identifier(putchar)
  (
  int
  identifier(c)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  identifier(putchar)
  (
  const int(72)
  )
  ;
  identifier(putchar)
  (
  const int(101)
  )
  ;
  identifier(putchar)
  (
  const int(108)
  )
  ;
  identifier(putchar)
  (
  const int(108)
  )
  ;
  identifier(putchar)
  (
  const int(111)
  )
  ;
  identifier(putchar)
  (
  const int(44)
  )
  ;
  identifier(putchar)
  (
  const int(32)
  )
  ;
  identifier(putchar)
  (
  const int(87)
  )
  ;
  identifier(putchar)
  (
  const int(111)
  )
  ;
  identifier(putchar)
  (
  const int(114)
  )
  ;
  identifier(putchar)
  (
  const int(108)
  )
  ;
  identifier(putchar)
  (
  const int(100)
  )
  ;
  identifier(putchar)
  (
  const int(33)
  )
  ;
  identifier(putchar)
  (
  const int(10)
  )
  ;
  }
