test/tests/stages/9_functions/invalid_parse/function_returning_function.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(foo)
  (
  void
  )
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
